jackson + mybatis HW